Rewrite clings from Rust to Swift (Phase 1-3)
Complete Swift rewrite of the Things 3 CLI using native macOS APIs:

Core infrastructure:
- Swift Package Manager with ArgumentParser, GRDB.swift, SwiftDate
- JXABridge for osascript JavaScript execution
- ThingsClient protocol with actor-based async implementation
- OutputFormatter with JSON and colored text formatters

Commands implemented:
- List views: today, inbox, upcoming, anytime, someday, logbook
- Metadata: projects, areas, tags
- Todo operations: show, add (with NLP), complete, cancel, delete
- Utilities: search, open

Natural language parsing:
- Tags (#tag), dates (tomorrow, next monday), projects (for X)
- Deadlines (by friday), priority (!, !!, !!!), notes (//)
- Checklist items (- item1 - item2)

Remaining work:
- Bulk operations (bulk complete/cancel/tag)
- Stats dashboard
- Review workflow
- Shell completions
- Full regression testing against Rust version

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# Rust
-/target/
-**/*.rs.bk
+# Swift
+.build/
+.swiftpm/
+Package.resolved
+*.xcodeproj/
+*.xcworkspace/
+DerivedData/
+xcuserdata/
 
 # IDE / Editor
 .idea/
@@ -19,7 +24,6 @@
 ._*
 
 # Coverage reports
-tarpaulin-report.html
 coverage/
 *.profraw
 *.profdata
@@ -36,7 +40,7 @@ coverage/
 .envrc
 
 # Testing artifacts
-/tests/fixtures/temp/
+/Tests/fixtures/temp/
 
 # Security - prevent accidental commit of sensitive files
 *secret*
